@@ -1,3 +1,6 @@
+2008-12-16 Fixed dpi-dependent behavior of Legend and fancybox in Text.
+           -JJL
+
 2008-12-16 Added markevery property to Line2D to support subsampling
            of markers - JDH
 
